--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   
   h1 {
     font: 2rem "Cambria", "Cochin", Georgia, Times, "Times New Roman", serif;
-    color: #38464c;
+    color: #52b2db;
     letter-spacing: 0.2rem;
     padding: 0.3rem;
   }
