changed the colors

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
     display: inline-block;
     padding: 0.8rem 1.5rem;
     color: #ffffff;
-    background-color: #f5af09;
+    background-color: #140e00;
     cursor: pointer;
     border-radius: 0.4rem;
     font: bold 15px "Quicksand", sans-serif;
